[package]
name = "shared-state-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.9"

tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-test = "0.4.4"
tokio-util = { version = "0.7.13", features = ["codec"] }
